Fix announcement bar scroll (#13)
* #7 fix(header): fix driver text overflow

* fix(header): only show scrollbar if needed

--- a/src/css/components/_header.css
+++ b/src/css/components/_header.css
@@ -21,7 +21,7 @@ header.header,
   height: var(--announcement-bar-height);
   padding-top: var(--space-2);
   padding-bottom: var(--space-2);
-  overflow-y: scroll;
+  overflow-y: auto;
   background: var(--anakiwa);
   -webkit-overflow-scrolling: touch;
 }
